Fix overlap and selection bug

--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -2,7 +2,7 @@
 
 /*=============== HEADER & NAV ===============*/
 .header{
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     width: 100%;
